[gd_scene load_steps=8 format=3 uid="uid://beagshr0b5ex3"]

[ext_resource type="Script" path="res://src/menus/winning_menu/winning_screen.gd" id="1_mwfcj"]
[ext_resource type="PackedScene" uid="uid://c15f8n6tsvbed" path="res://src/effects/Fireworks.tscn" id="1_oae4d"]
[ext_resource type="Texture2D" uid="uid://de2q0fpx0xc6" path="res://assets/_tmp/A WINNER IS YOU.png" id="2_fqkjp"]
[ext_resource type="AudioStream" uid="uid://ct3uxu3fdugg1" path="res://assets/music/winer Edit 1 Export 1.ogg" id="4_w8jbr"]

[sub_resource type="Animation" id="Animation_po8rk"]
resource_name = "win_logo_animated"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AWinnerIsYou:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_be6t2"]
resource_name = "win_logo_loop"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AWinnerIsYou:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 0.6), Vector2(1, 1), Vector2(0.6, 0.6), Vector2(1, 1), Vector2(0.6, 0.6), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_afcyu"]
_data = {
"win_logo_animated": SubResource("Animation_po8rk"),
"win_logo_loop": SubResource("Animation_be6t2")
}

[node name="WinningScreen" type="Node2D"]
script = ExtResource("1_mwfcj")

[node name="FishFireworks" parent="." instance=ExtResource("1_oae4d")]

[node name="AWinnerIsYou" type="Sprite2D" parent="."]
position = Vector2(960, 512)
texture = ExtResource("2_fqkjp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_afcyu")
}

[node name="FireworksTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_w8jbr")
autoplay = true

[connection signal="timeout" from="FireworksTimer" to="." method="_on_timer_timeout"]
